# pyproject.toml
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GRSdriver"
version = "1.0.0"
description = "Driver for L1C satellite images dedicated to GRS processor"
readme = "README.md"
authors = [{ name = "Tristan Harmel", email = "tristan.harmel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Sentinel-2","Landsat-8","Landsat-9","driver", "EO satellite"]
requires-python = ">=3.9"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Tristanovsk/GRSdriver"

#[project.scripts]
#realpython = "GRSdriver.__main__:main"