# pyproject.toml
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GRSdriver"
version = "1.0.6"
description = "Driver for L1C satellite images dedicated to GRS processor"
readme = "README.md"
authors = [{ name = "Tristan Harmel", email = "tristan.harmel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Sentinel-2", "Landsat-8", "Landsat-9", "driver", "EO satellite"]
requires-python = ">=3.9"
dynamic = ["dependencies"]

#[tool.setuptools]
#include-package-data = true
#packages = ['GRSdriver']

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.nc", "*.txt", "*.csv", "*.dat","*.xlsx", "rsr/data/*"]

[tool.setuptools.exclude-package-data]
"*" = ["build", ".gitattributes"]

[project.scripts]
grs_driver = "GRSdriver.run:main"

#dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Documentation = "https://grsdriver.readthedocs.io"
Homepage = "https://github.com/Tristanovsk/GRSdriver"

